--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    
+    <title>My App</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
    <!-- upper header -->
@@ -20,9 +19,15 @@
    <!-- upper header -->
    <!-- nav bar -->
    <nav class="nav-bar-outer">
+
+        <div class="nav-left nav-inner-context">
+            <img class="img" src="Wattpad_logooo.png" alt="logo">
+        </div>
+        <div class="nav-right nav-inner-context"></div>
     
    </nav>
-   <script src="https://kit.fontawesome.com/877013bddc.js" crossorigin="anonymous"></script>
+   <script src="https://kit.fontawesome.com/86f6ed8cfa.js" crossorigin="anonymous"></script>
+    <!-- nav bar -->
 
 </body>
 </html>
