--- a/index.html
+++ b/index.html
@@ -23,7 +23,14 @@
         <div class="nav-left nav-inner-context">
             <img class="img" src="Wattpad_logooo.png" alt="logo">
         </div>
-        <div class="nav-right nav-inner-context"></div>
+        <div class="nav-right nav-inner-context">
+            <ul>
+                <li><a href="">CHALLENGES</a></li>
+                <li><a href="">SOLUTIONS</a></li>
+                <li><a href="">RESOURCES</a></li>
+                <li><a href="">UNLOCK</a></li>
+            </ul>
+        </div>
     
    </nav>
    <script src="https://kit.fontawesome.com/86f6ed8cfa.js" crossorigin="anonymous"></script>
