upper-header and nav-bar

--- a/index.html
+++ b/index.html
@@ -27,11 +27,14 @@
             <ul>
                 <li><a href="">CHALLENGES</a></li>
                 <li><a href="">RESOURCES</a></li>
-                <li><a href="">SOLUTUONS</a></li>
-                <li><a href="">UNLOCK</a></li>
-                
-               
+                <li><a href="">SOLUTIONS</a></li>
+                <li><a href="">UNLOCK &nbsp &nbsp <span class="badge">PRO</span></a></li>
             </ul>
+
+            <button class="login-with-github-btn">LOG IN WITH GITHUB
+                <span><i class="fa-brands fa-github" style="color: #1C2022; filter: invert(100%);"></i></span>
+            </button>
+
         </div>
     </nav>
     <!-- navbar -->
