--- a/index.html
+++ b/index.html
@@ -3,27 +3,31 @@
 <head>
     
     <title>Frontend Mentor Practice</title>
+    <link rel="stylesheet" href="styles.css">
+   
 
-    <style>
-        .outer{
-            width: 500px;
-            height: 500px;
-            border: 1px solid black;
-        }
-
-        .inner{
-            width: 100px;
-            height: 100px;
-            border: 1px solid red;
-        }
-    </style>
+    
 </head>
 <body>
-    <div class="outer">
-        <div class="inner">1</div>
-        <div class="inner">2</div>
-        <div class="inner">3</div>
-        <div class="inner">4</div>
+    <!-- upper header -->
+    <div class="upper-outer">
+        <span class="briefcase">
+            <i class="fa-solid fa-briefcase"></i>
+        </span>
+
+        <h4>Looking to hire developers? <a href="#">Visit our Hiring Platform</a></h4>
+
     </div>
+    <!-- upper header -->
+
+    <!-- navbar -->
+    <nav class="nav-bar-outer">
+        <div class="nav-left nav-inner-context"></div>
+        <div class="nav-right nav-inner-context"></div>
+    </nav>
+
+     <!-- navbar -->
+    <script src="https://kit.fontawesome.com/21889b08a2.js" crossorigin="anonymous"></script>
+   
 </body>
 </html>
