--- a/index.html
+++ b/index.html
@@ -19,11 +19,20 @@
 
     </div>
     <!-- upper header -->
-
     <!-- navbar -->
     <nav class="nav-bar-outer">
-        <div class="nav-left nav-inner-context"></div>
-        <div class="nav-right nav-inner-context"></div>
+        <div class="nav-left nav-inner-context">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/13/Wattpad-logo-vector.svg/1200px-Wattpad-logo-vector.svg.png" alt="logo">
+        </div>
+        <div class="nav-right nav-inner-context">
+            <ul>
+                <li><a href="#">CHALLENGES</a></li>
+                <li><a href="#">SOLUTIONS</a></li>
+                <li><a href="#">RESOURCES</a></li>
+                <li><a href="#">UNLOCK</a></li>
+                
+            </ul>
+        </div>
     </nav>
 
      <!-- navbar -->
